Do not show DOWNLOAD PAGE LATER button for post error page

BUG=676391

Review-Url: https://codereview.chromium.org/2618503003
Cr-Commit-Position: refs/heads/master@{#441765}

Former-commit-id: e00bb4ae7b482e3a14eaf9f46043b9e89e3dbfb1